
name:                ethereum-discovery
version:             0.1.0.0
author:              jamshid
maintainer:          jim
build-type:          Simple
cabal-version:       >=1.10

executable ethereum-discover
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , base16-bytestring
                     , binary
                     , blockapps-data
                     , blockapps-util
                     , bytestring
                     , cipher-aes
                     , cryptohash
--                     , cryptonite
                     , crypto-pubkey
                     , crypto-pubkey-types
                     , crypto-random
                     , ethereum-rlp
                     , haskoin
                     , monads-tf
                     , network
                     , persistent-postgresql
                     , postgresql-simple
                     , resourcet
                     , stm
                     , text
                     , time
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

