
name:                ethereum-discovery
version:             0.1.0.0
author:              jamshid
maintainer:          jim
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0

executable ethereum-discover
  main-is:             Main.hs
  build-depends:       base
                     , base16-bytestring
                     , binary
                     , blockapps-data-db
                     , blockapps-data
                     , blockapps-util
                     , bytestring
                     , cpu
                     , cryptohash
                     , crypto-pubkey
                     , crypto-pubkey-types
                     , ethereum-rlp
                     , haskoin
                     , mtl
                     , network
                     , persistent-postgresql
                     , postgresql-simple
                     , resourcet
                     , split
                     , text
                     , time
                     , transformers
  other-modules:       Blockchain.ContextLite
                       Blockchain.ExtendedECDSA
                       Blockchain.P2PUtil
                       Blockchain.UDP
                       Blockchain.UDPServer
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

